--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Cinematic Shader Scene</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    html, body {
-      margin: 0; padding: 0; overflow: hidden; background: black;
-      height: 100%;
-      user-select: none;
-      touch-action: none;
-    }
-    canvas {
-      width: 100vw;
-      height: 100vh;
-      display: block;
-      cursor: grab;
-      touch-action: none;
-    }
-    canvas:active {
-      cursor: grabbing;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Shader mit Orbit Controls (Maus & Touch)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<style>
+  html, body {
+    margin: 0; padding: 0; overflow: hidden; background: black;
+    height: 100%;
+    user-select: none;
+    touch-action: none;
+  }
+  canvas {
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    cursor: grab;
+    touch-action: none;
+  }
+  canvas:active {
+    cursor: grabbing;
+  }
+</style>
 </head>
 <body>
 <canvas id="glcanvas"></canvas>
 
+<!-- Vertex Shader -->
 <script type="x-shader/x-vertex">
 attribute vec3 position;
 void main() {
@@ -33,6 +34,7 @@ void main() {
 }
 </script>
 
+<!-- Fragment Shader -->
 <script type="x-shader/x-fragment">
 precision highp float;
 uniform vec2 resolution;
@@ -53,31 +55,31 @@ float fBox(vec3 p, vec3 b) {
   return length(max(d,0.0)) + min(max(d.x,max(d.y,d.z)),0.0);
 }
 float scene(vec3 p, float time) {
-  float tx = 0.3 + 0.07 * sin(time * 0.1);
-  float ty = 0.3 + 0.05 * cos(time * 0.07);
-  float tz = 0.3 + 0.06 * sin(time * 0.05);
-  float sx = 0.1 + 0.03 * sin(time * 0.06 + 1.3);
-  float sy = 0.1 + 0.02 * cos(time * 0.09 + 2.2);
-  float sz = 0.1 + 0.035 * sin(time * 0.04);
-  float sphereRadius = 0.2 + 0.05 * sin(time * 0.03 + 1.8);
-  float translation = 0.1 * sin(time * 0.03);
+  float baseX = 0.3 + 0.07 * sin(time * 0.07);
+  float baseY = 0.35 + 0.05 * cos(time * 0.03);
+  float baseZ = 0.25 + 0.06 * sin(time * 0.05);
+  float smallX = 0.1 + 0.02 * sin(time * 0.04 + 1.0);
+  float smallY = 0.12 + 0.025 * cos(time * 0.06 + 2.0);
+  float smallZ = 0.14 + 0.03 * sin(time * 0.03);
+  float sphereRadius = 0.4 + 0.05 * sin(time * 0.02 + 1.5);
+  float translation = 0.15 * sin(time * 0.01);
 
   p.z += translation;
   float v = 1.0;
   for (int i = 0; i < 6; i++) {
     vec2 absXY = abs(p.xy) - v;
     p = vec3(absXY, p.z);
-    p = rotationY(time * (0.03 + 0.015 * float(i))) * p;
-    p = rotationZ(time * (0.025 + 0.01 * float(i))) * p;
-    v *= 0.85;
+    p = rotationY(time * (0.05 + 0.01 * float(i))) * p;
+    p = rotationZ(time * (0.035 + 0.008 * float(i))) * p;
+    v *= 0.9;
   }
 
-  float box1 = fBox(p, vec3(tx, ty, tz));
-  float box2 = fBox(p, vec3(sx, sy, sz));
+  float box1 = fBox(p, vec3(baseX, baseY, baseZ));
+  float box2 = fBox(p, vec3(smallX, smallY, smallZ));
   float d = -box1;
   d = min(d, box2);
   float sphere = length(p) - sphereRadius;
-  return max(d, sphere);  // box dominiert, sphere wird eingebettet
+  return max(d, sphere);
 }
 vec3 getNormal(vec3 p, float time) {
   float e = 0.001;
@@ -91,7 +93,6 @@ vec3 getNormal(vec3 p, float time) {
 void main() {
   vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
   uv.x *= resolution.x / resolution.y;
-
   vec3 ro = camPos;
   vec3 ta = camTarget;
   vec3 f = normalize(ta - ro);
@@ -114,13 +115,10 @@ void main() {
   if(hit) {
     vec3 p = ro + rd * t;
     vec3 n = getNormal(p, time);
-    vec3 lightDir = normalize(vec3(
-      0.7 * sin(time * 0.7),
-      1.0,
-      0.6 * cos(time * 0.5)
-    ));
-    float diff = clamp(dot(n, lightDir), 0.0, 1.0);
-    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 24.0);
+    vec3 lightDir1 = normalize(vec3(0.7, 1.0, 0.8));
+    vec3 lightDir2 = normalize(vec3(-0.5, 0.6, -1.0));
+    float diff = 0.4 * clamp(dot(n, lightDir1), 0.0, 1.0) + 0.2 * clamp(dot(n, lightDir2), 0.0, 1.0);
+    float spec = pow(clamp(dot(reflect(-lightDir1, n), -rd), 0.0, 1.0), 16.0);
     col = vec3(0.85) * diff + vec3(1.0) * spec * 0.3;
     col = pow(col, vec3(0.4545));
   }
@@ -128,17 +126,18 @@ void main() {
 }
 </script>
 
+<!-- JavaScript -->
 <script>
-const canvas = document.getElementById(\"glcanvas\");
-const gl = canvas.getContext(\"webgl\");
-if (!gl) alert(\"WebGL nicht unterstützt\");
+const canvas = document.getElementById("glcanvas");
+const gl = canvas.getContext("webgl");
+if (!gl) alert("WebGL nicht unterstützt");
 
 function resize() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
   gl.viewport(0, 0, canvas.width, canvas.height);
 }
-window.addEventListener(\"resize\", resize);
+window.addEventListener("resize", resize);
 resize();
 
 function compileShader(type, source) {
@@ -152,8 +151,8 @@ function compileShader(type, source) {
   return shader;
 }
 
-const vsSource = document.querySelector('script[type=\"x-shader/x-vertex\"]').textContent;
-const fsSource = document.querySelector('script[type=\"x-shader/x-fragment\"]').textContent;
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
 
 const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
 const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
@@ -182,6 +181,7 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
+// Kamera
 let theta = Math.PI/4;
 let phi = Math.PI/4;
 let radius = 4.0;
@@ -206,15 +206,15 @@ let isDragging = false;
 let isPanning = false;
 let lastX = 0, lastY = 0;
 
-canvas.addEventListener(\"mousedown\", e => {
+canvas.addEventListener("mousedown", e => {
   isDragging = true;
   isPanning = e.button === 2 || e.shiftKey;
   lastX = e.clientX;
   lastY = e.clientY;
 });
-canvas.addEventListener(\"mouseup\", () => isDragging = false);
-canvas.addEventListener(\"mouseleave\", () => isDragging = false);
-canvas.addEventListener(\"mousemove\", e => {
+canvas.addEventListener("mouseup", () => isDragging = false);
+canvas.addEventListener("mouseleave", () => isDragging = false);
+canvas.addEventListener("mousemove", e => {
   if (!isDragging) return;
   let dx = e.clientX - lastX;
   let dy = e.clientY - lastY;
@@ -234,30 +234,31 @@ canvas.addEventListener(\"mousemove\", e => {
     phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
   }
 });
-canvas.addEventListener(\"wheel\", e => {
+canvas.addEventListener("wheel", e => {
   e.preventDefault();
   radius += e.deltaY * 0.0015;
   radius = Math.max(0.5, Math.min(20, radius));
 });
-canvas.addEventListener(\"contextmenu\", e => e.preventDefault());
+canvas.addEventListener("contextmenu", e => e.preventDefault());
 
+// Touch
 let touchMode = null;
 let touchStartDist = 0;
-canvas.addEventListener(\"touchstart\", e => {
+canvas.addEventListener("touchstart", e => {
   if (e.touches.length === 1) {
-    touchMode = \"rotate\";
+    touchMode = "rotate";
     lastX = e.touches[0].clientX;
     lastY = e.touches[0].clientY;
   } else if (e.touches.length === 2) {
-    touchMode = \"zoom\";
+    touchMode = "zoom";
     let dx = e.touches[0].clientX - e.touches[1].clientX;
     let dy = e.touches[0].clientY - e.touches[1].clientY;
     touchStartDist = Math.sqrt(dx * dx + dy * dy);
   }
 });
-canvas.addEventListener(\"touchmove\", e => {
+canvas.addEventListener("touchmove", e => {
   e.preventDefault();
-  if (touchMode === \"rotate\" && e.touches.length === 1) {
+  if (touchMode === "rotate" && e.touches.length === 1) {
     let dx = e.touches[0].clientX - lastX;
     let dy = e.touches[0].clientY - lastY;
     lastX = e.touches[0].clientX;
@@ -265,7 +266,7 @@ canvas.addEventListener(\"touchmove\", e => {
     theta -= dx * 0.005;
     phi -= dy * 0.005;
     phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
-  } else if (touchMode === \"zoom\" && e.touches.length === 2) {
+  } else if (touchMode === "zoom" && e.touches.length === 2) {
     let dx = e.touches[0].clientX - e.touches[1].clientX;
     let dy = e.touches[0].clientY - e.touches[1].clientY;
     let dist = Math.sqrt(dx * dx + dy * dy);
@@ -275,8 +276,9 @@ canvas.addEventListener(\"touchmove\", e => {
     touchStartDist = dist;
   }
 });
-canvas.addEventListener(\"touchend\", () => touchMode = null);
+canvas.addEventListener("touchend", () => touchMode = null);
 
+// Render mit schnellerer Auto-Rotation
 function render(t) {
   gl.viewport(0, 0, canvas.width, canvas.height);
   gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
