--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Shader mit Orbit Controls (Boxiger Look)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    html, body {
-      margin: 0; padding: 0; overflow: hidden; background: black;
-      height: 100%;
-      user-select: none;
-      touch-action: none;
-    }
-    canvas {
-      width: 100vw;
-      height: 100vh;
-      display: block;
-      cursor: grab;
-      touch-action: none;
-    }
-    canvas:active {
-      cursor: grabbing;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Shader mit Orbit Controls (Maus & Touch)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<style>
+  html, body {
+    margin: 0; padding: 0; overflow: hidden; background: black;
+    height: 100%;
+    user-select: none;
+    touch-action: none;
+  }
+  canvas {
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    cursor: grab;
+    touch-action: none;
+  }
+  canvas:active {
+    cursor: grabbing;
+  }
+</style>
 </head>
 <body>
 <canvas id="glcanvas"></canvas>
@@ -55,34 +55,32 @@ float fBox(vec3 p, vec3 b) {
   return length(max(d,0.0)) + min(max(d.x,max(d.y,d.z)),0.0);
 }
 float scene(vec3 p, float time) {
-  // Reduzierte Animationsgeschwindigkeit
-  float t = time * 0.4;
-  float base = 0.3 + 0.05 * sin(t * 0.1);
-  float sphereRadius = 0.15 + 0.02 * cos(t * 0.07);
-  float translation = 0.1 * sin(t * 0.05);
+  // Animation ca. 3x langsamer (Zeitparameter / 3)
+  float baseX = 0.3 + 0.07 * sin(time * 0.15 / 3.0);
+  float baseY = 0.3 + 0.05 * cos(time * 0.12 / 3.0);
+  float baseZ = 0.3 + 0.06 * sin(time * 0.09 / 3.0);
+  float smallX = 0.1 + 0.02 * sin(time * 0.1 / 3.0 + 1.0);
+  float smallY = 0.1 + 0.025 * cos(time * 0.13 / 3.0 + 2.0);
+  float smallZ = 0.1 + 0.03 * sin(time * 0.17 / 3.0);
+  float sphereRadius = 0.4 + 0.05 * sin(time * 0.08 / 3.0 + 1.5);
+  float translation = 0.15 * sin(time * 0.07 / 3.0);
+
   p.z += translation;
-
   float v = 1.0;
-  float d = 0.0;
   for (int i = 0; i < 6; i++) {
-    vec3 s = vec3(
-      base + 0.02 * sin(t + float(i)),
-      base + 0.03 * cos(t + float(i)),
-      base + 0.01 * sin(t * 1.2 + float(i))
-    );
-
     vec2 absXY = abs(p.xy) - v;
     p = vec3(absXY, p.z);
-    p = rotationY(t * (0.03 + 0.01 * float(i))) * p;
-    p = rotationZ(t * (0.025 + 0.008 * float(i))) * p;
-    v *= 0.85;
-
-    float boxDist = fBox(p, s);
-    d = i == 0 ? -boxDist : max(d, -boxDist);
+    p = rotationY(time * (0.05 + 0.03 * float(i)) / 3.0) * p;
+    p = rotationZ(time * (0.035 + 0.02 * float(i)) / 3.0) * p;
+    v *= 0.9;
   }
 
+  float box1 = fBox(p, vec3(baseX, baseY, baseZ));
+  float box2 = fBox(p, vec3(smallX, smallY, smallZ));
+  float d = -box1;
+  d = min(d, box2);
   float sphere = length(p) - sphereRadius;
-  return min(d, sphere);  // Box dominiert das Erscheinungsbild
+  return max(d, sphere);
 }
 vec3 getNormal(vec3 p, float time) {
   float e = 0.001;
@@ -118,17 +116,16 @@ void main() {
   if(hit) {
     vec3 p = ro + rd * t;
     vec3 n = getNormal(p, time);
-    vec3 lightDir = normalize(vec3(0.6, 0.9, 0.5));
+    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
     float diff = clamp(dot(n, lightDir), 0.0, 1.0);
     float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
-    col = vec3(0.8,0.85,0.9) * diff + vec3(1.0) * spec * 0.2;
+    col = vec3(0.8,0.9,1.0) * diff + vec3(1.0) * spec * 0.4;
     col = pow(col, vec3(0.4545));
   }
   gl_FragColor = vec4(col, 1.0);
 }
 </script>
 
-<!-- JavaScript -->
 <script>
 const canvas = document.getElementById("glcanvas");
 const gl = canvas.getContext("webgl");
@@ -183,25 +180,25 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Kamera
+// Kamera Orbit Controls (unverändert, Original übernommen)
 let theta = Math.PI/4;
 let phi = Math.PI/4;
 let radius = 4.0;
 let target = [0, 0, 0];
 
-function subtractVectors(a,b){ return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
-function addVectors(a,b){ return [a[0]+b[0], a[1]+b[1], a[2]+b[2]]; }
-function scaleVector(v,s){ return [v[0]*s, v[1]*s, v[2]*s]; }
-function lengthVector(v){ return Math.sqrt(v[0]**2 + v[1]**2 + v[2]**2); }
-function normalize(v){ let l = lengthVector(v); return l > 0.00001 ? scaleVector(v, 1/l) : [0,0,0]; }
-function cross(a,b){ return [a[1]*b[2]-a[2]*b[1], a[2]*b[0]-a[0]*b[2], a[0]*b[1]-a[1]*b[0]]; }
+function add(a,b){return [a[0]+b[0],a[1]+b[1],a[2]+b[2]];}
+function subtract(a,b){return [a[0]-b[0],a[1]-b[1],a[2]-b[2]];}
+function scale(v,s){return [v[0]*s,v[1]*s,v[2]*s];}
+function length(v){return Math.sqrt(v[0]*v[0]+v[1]*v[1]+v[2]*v[2]);}
+function normalize(v){let l=length(v);return l>0.00001?scale(v,1/l):[0,0,0];}
+function cross(a,b){return [a[1]*b[2]-a[2]*b[1],a[2]*b[0]-a[0]*b[2],a[0]*b[1]-a[1]*b[0]];}
 
 function getCamPos() {
   let sinPhi = Math.sin(phi);
   let x = radius * sinPhi * Math.sin(theta);
   let y = radius * Math.cos(phi);
   let z = radius * sinPhi * Math.cos(theta);
-  return addVectors(target, [x, y, z]);
+  return add(target, [x, y, z]);
 }
 
 let isDragging = false;
@@ -224,11 +221,11 @@ canvas.addEventListener("mousemove", e => {
   lastY = e.clientY;
   if (isPanning) {
     const panSpeed = 0.005 * radius;
-    let forward = normalize(subtractVectors(target, getCamPos()));
+    let forward = normalize(subtract(target, getCamPos()));
     let right = normalize(cross(forward, [0,1,0]));
     let up = cross(right, forward);
-    target = addVectors(target,
-      addVectors(scaleVector(right, -dx * panSpeed), scaleVector(up, dy * panSpeed))
+    target = add(target,
+      add(scale(right, -dx * panSpeed), scale(up, dy * panSpeed))
     );
   } else {
     theta -= dx * 0.005;
@@ -243,9 +240,8 @@ canvas.addEventListener("wheel", e => {
 });
 canvas.addEventListener("contextmenu", e => e.preventDefault());
 
-// Touch
+// Touch Controls (original)
 let touchMode = null;
-let touchStartDist = 0;
 canvas.addEventListener("touchstart", e => {
   if (e.touches.length === 1) {
     touchMode = "rotate";
@@ -253,9 +249,9 @@ canvas.addEventListener("touchstart", e => {
     lastY = e.touches[0].clientY;
   } else if (e.touches.length === 2) {
     touchMode = "zoom";
-    let dx = e.touches[0].clientX - e.touches[1].clientX;
-    let dy = e.touches[0].clientY - e.touches[1].clientY;
-    touchStartDist = Math.sqrt(dx * dx + dy * dy);
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const dy = e.touches[0].clientY - e.touches[1].clientY;
+    lastDist = Math.sqrt(dx*dx + dy*dy);
   }
 });
 canvas.addEventListener("touchmove", e => {
@@ -269,31 +265,43 @@ canvas.addEventListener("touchmove", e => {
     phi -= dy * 0.005;
     phi = Math.max(0.01, Math.min(Math.PI - 0.01, phi));
   } else if (touchMode === "zoom" && e.touches.length === 2) {
-    let dx = e.touches[0].clientX - e.touches[1].clientX;
-    let dy = e.touches[0].clientY - e.touches[1].clientY;
-    let dist = Math.sqrt(dx * dx + dy * dy);
-    let delta = dist - touchStartDist;
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const dy = e.touches[0].clientY - e.touches[1].clientY;
+    let dist = Math.sqrt(dx*dx + dy*dy);
+    let delta = dist - lastDist;
+    lastDist = dist;
     radius -= delta * 0.01;
     radius = Math.max(0.5, Math.min(20, radius));
-    touchStartDist = dist;
   }
 });
-canvas.addEventListener("touchend", () => touchMode = null);
+canvas.addEventListener("touchend", e => {
+  if (e.touches.length === 0) touchMode = null;
+});
 
-// Animation
-function render(t) {
-  gl.viewport(0, 0, canvas.width, canvas.height);
-  gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-  theta += 0.003;
-  let camPos = getCamPos();
+let lastDist = 0;
+
+// Zeit-Variable
+let startTime = performance.now();
+let time = 0;
+
+// Automatische Rotation langsamer (ca. 6x langsamer als Original 0.01 => 0.0015)
+function animate() {
+  time = (performance.now() - startTime) / 1000;
+  // Automatische Rotation nur wenn nicht draggen
+  if(!isDragging) {
+    theta += 0.0015;
+  }
+
   gl.uniform2f(resLoc, canvas.width, canvas.height);
-  gl.uniform1f(timeLoc, t * 0.001);
-  gl.uniform3fv(camPosLoc, camPos);
-  gl.uniform3fv(camTargetLoc, target);
+  gl.uniform1f(timeLoc, time);
+  let camPos = getCamPos();
+  gl.uniform3f(camPosLoc, camPos[0], camPos[1], camPos[2]);
+  gl.uniform3f(camTargetLoc, target[0], target[1], target[2]);
+
   gl.drawArrays(gl.TRIANGLES, 0, 6);
-  requestAnimationFrame(render);
+  requestAnimationFrame(animate);
 }
-requestAnimationFrame(render);
+animate();
 </script>
 </body>
 </html>
